--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7",
     "pg": "^8.0.2"
   },
   "devDependencies": {
